--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.7.1",
     "gatsby": "^4.6.1",
     "gatsby-plugin-clicky": "^1.0.0",
     "gatsby-plugin-gatsby-cloud": "^4.6.0",
@@ -20,6 +21,7 @@
     "prop-types": "^15.8.0",
     "react": "^17.0.1",
     "react-bootstrap": "^2.1.2",
+    "react-chartjs-2": "^4.1.0",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0"
   },
